--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -709,5 +709,13 @@
   "advancements.betternether.ruby_ore.title":"Rubinerz",
  "advancements.betternether.ruby_ore.description":"Finde im Nether Rubinerz",
  "advancements.betternether.make_crying.title":"Las' sie weinen",
- "advancements.betternether.make_crying.description":"Verwende einen Blitzableiter um alle weinenden und schluchzenden Varianten von Obsidian herzustellen."
+ "advancements.betternether.make_crying.description":"Verwende einen Blitzableiter um alle weinenden und schluchzenden Varianten von Obsidian herzustellen",
+ "advancements.betternether.obsidian_blocks.title":"Obsidian Meister",
+ "advancements.betternether.obsidian_blocks.description":"Stelle alle Obsidian-Varianten her",
+ "advancements.betternether.nether_wood.title":"Ab in den Wald",
+ "advancements.betternether.nether_wood.description":"Sammle alle Netherhölzer",
+ "advancements.betternether.ruby_gear.title":"Mit Flammen bedeckt",
+ "advancements.betternether.ruby_gear.description":"Hülle dich in falmmenrote Rubinausrüstung",
+ "advancements.betternether.ruby_tools.title":"Das Rote Nether",
+ "advancements.betternether.ruby_tools.description":"Verwende Rubinwerkzeuge aus den Tiefen des Nether"
 }
