Stonecutter for Obsidian (#432) and new tile variant

--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -415,6 +415,8 @@
   "block.betternether.blue_obsidian_bricks_stairs": "Blaue Obsidianziegeltreppe",
   "block.betternether.blue_obsidian_bricks_slab": "Blaue Obsidianziegelstufe",
   "block.betternether.blue_obsidian_tile": "Blauer polierter Obsidian",
+  "block.betternether.blue_obsidian_rod_tiles": "Blauer Obsidianstäbchen",
+  "block.betternether.obsidian_rod_tiles": "Obsidianstäbchen",
   "block.betternether.blue_obsidian_tile_small": "Blaue Obsidianfliese",
   "block.betternether.blue_obsidian_tile_stairs": "Blaue Obsidianfliesentreppe",
   "block.betternether.blue_obsidian_tile_slab": "Blaue Obsidianfliesenstufe",
