Added nether-city advancement

--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -719,5 +719,7 @@
  "advancements.betternether.ruby_gear.title":"Mit Flammen bedeckt",
  "advancements.betternether.ruby_gear.description":"Hülle dich in falmmenrote Rubinausrüstung",
  "advancements.betternether.ruby_tools.title":"Das Rote Nether",
- "advancements.betternether.ruby_tools.description":"Verwende Rubinwerkzeuge aus den Tiefen des Nether"
+ "advancements.betternether.ruby_tools.description":"Verwende Rubinwerkzeuge aus den Tiefen des Nether",
+  "advancements.betternether.city.title":"Eine glorreiche Vergangenheit",
+  "advancements.betternether.city.description":"Finde eine längst verlassene Nether-Stadt"
 }
