--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -719,6 +719,8 @@
     "advancements.betternether.ruby_gear.title":"Covered in Flames",
     "advancements.betternether.ruby_gear.description":"Cover yourself in flaming red ruby gear",
     "advancements.betternether.ruby_tools.title":"Red Nether",
-    "advancements.betternether.ruby_tools.description":"Use some ruby tools from the depth of the Nether"
+    "advancements.betternether.ruby_tools.description":"Use some ruby tools from the depth of the Nether",
+	"advancements.betternether.city.title":"A glorious Past",
+	"advancements.betternether.city.description":"Find a long abandoned Nether City"
     
 }  
