--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -723,5 +723,5 @@
 	"advancements.betternether.city.title":"A glorious Past",
 	"advancements.betternether.city.description":"Find a long abandoned Nether City",
 	
-	"biome.betternether.upside_down_forest_cleared": "Cleared Upside Down Forest"
+	"biome.betternether.upside_down_forest_cleared": "Dead Upside Down Forest"
 }
