--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -723,5 +723,7 @@
   "advancements.betternether.city.title":"Eine glorreiche Vergangenheit",
   "advancements.betternether.city.description":"Finde eine längst verlassene Nether-Stadt",
   
-  "biome.betternether.upside_down_forest_cleared": "Abgestorbener Kopfüberwald"
+  "biome.betternether.upside_down_forest_cleared": "Abgestorbener Kopfüberwald",
+  "enchantment.betternether.obsidian_breaker": "Obsidiangräber",
+  "enchantment.betternether.ruby_fire": "Rubinfeuer"
 }
