Added Enchantment Description

--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -725,6 +725,8 @@
   
   "biome.betternether.upside_down_forest_cleared": "Abgestorbener Kopfüberwald",
   "enchantment.betternether.obsidian_breaker": "Obsidiangräber",
+  "enchantment.betternether.obsidian_breaker.desc": "Beschleunigt das graben von Obsidian.",
   "enchantment.betternether.ruby_fire": "Rubinfeuer",
+  "enchantment.betternether.ruby_fire.desc": "Automatische Schmelzen von Erzen mit Spitzhacke / Flamme und Rückstoß bei Rüstung und Schwertern.",
   "betternether.survive.nethergound": "Netherböden"
 }
