[Feature] Bookshelf and Composter for Nether Woods

--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -625,5 +625,27 @@
   "enchantment.betternether.ruby_fire.desc": "Automatische Schmelzen von Erzen mit Spitzhacke / Flamme und Rückstoß bei Rüstung und Schwertern.",
   "betternether.survive.nethergound": "Netherböden",
   "flat_world_preset.betternether.flat": "Flaches Nether",
-  "emi.category.betternether.forge": "Schmieden"
+  "emi.category.betternether.forge": "Schmieden",
+  "block.betternether.nether_sakura_composter": "Nether Sakura Komposter",
+  "block.betternether.nether_sakura_bookshelf": "Nether Sakura Bücherregal",
+  "block.betternether.mushroom_fir_composter": "Pilztannenkomposter",
+  "block.betternether.mushroom_fir_bookshelf": "Pilstannenbücherregal",
+  "block.betternether.anchor_tree_composter": "Ankerbaumkomposter",
+  "block.betternether.anchor_tree_bookshelf": "Ankerbaumbücherregal",
+  "block.betternether.rubeus_composter": "Rubeuskomposter",
+  "block.betternether.rubeus_bookshelf": "Rubeusbücherregal",
+  "block.betternether.stalagnate_composter": "Stalagnatkomposter",
+  "block.betternether.stalagnate_bookshelf": "Stalagnatbücherregal",
+  "block.betternether.wart_composter": "Warzenkomposter",
+  "block.betternether.wart_bookshelf": "Warzenbücherregal",
+  "block.betternether.willow_composter": "Weidenkomposter",
+  "block.betternether.willow_bookshelf": "Weidenbücherregal",
+  "block.betternether.nether_mushroom_composter": "Pilzkomposter",
+  "block.betternether.nether_mushroom_bookshelf": "Pilzbücherregal",
+  "block.betternether.nether_reed_composter": "Schilfkomposter",
+  "block.betternether.nether_reed_bookshelf": "Schilfbücherregal",
+  "block.betternether.crimson_composter": "Karmesinkomposter",
+  "block.betternether.crimson_bookshelf": "Karmesinbücherregal",
+  "block.betternether.warped_composter": "Wirrkomposter",
+  "block.betternether.warped_bookshelf": "Wirrbücherregal"
 }
