--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -625,5 +625,27 @@
   "enchantment.betternether.ruby_fire.desc": "Auto-Smelts ores (Pickaxe) \n Flame and Knockback (Armor and Sword)",
   "betternether.survive.nethergound": "Nether Ground",
   "flat_world_preset.betternether.flat": "Flat Nether",
-  "emi.category.betternether.forge": "Forges"
+  "emi.category.betternether.forge": "Forges",
+  "block.betternether.nether_sakura_composter": "Nether Sakura Composter",
+  "block.betternether.nether_sakura_bookshelf": "Nether Sakura Bookshelf",
+  "block.betternether.mushroom_fir_composter": "Mushroom Fir Composter",
+  "block.betternether.mushroom_fir_bookshelf": "Mushroom Fir Bookshelf",
+  "block.betternether.anchor_tree_composter": "Anchor Tree Composter",
+  "block.betternether.anchor_tree_bookshelf": "Anchor Tree Bookshelf",
+  "block.betternether.rubeus_composter": "Rubeus Composter",
+  "block.betternether.rubeus_bookshelf": "Rubeus Bookshelf",
+  "block.betternether.stalagnate_composter": "Stalagnate Composter",
+  "block.betternether.stalagnate_bookshelf": "Stalagnate Bookshelf",
+  "block.betternether.wart_composter": "Wart Composter",
+  "block.betternether.wart_bookshelf": "Wart Bookshelf",
+  "block.betternether.willow_composter": "Willow Composter",
+  "block.betternether.willow_bookshelf": "Willow Bookshelf",
+  "block.betternether.nether_mushroom_composter": "Mushroom Composter",
+  "block.betternether.nether_mushroom_bookshelf": "Mushroom Bookshelf",
+  "block.betternether.nether_reed_composter": "Nether Reed Composter",
+  "block.betternether.nether_reed_bookshelf": "Nether Reed Bookshelf",
+  "block.betternether.crimson_composter": "Crimson Composter",
+  "block.betternether.crimson_bookshelf": "Crimson Bookshelf",
+  "block.betternether.warped_composter": "Warped Composter",
+  "block.betternether.warped_bookshelf": "Warped Bookshelf"
 }
