--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -647,5 +647,27 @@
   "block.betternether.crimson_composter": "Karmesinkomposter",
   "block.betternether.crimson_bookshelf": "Karmesinbücherregal",
   "block.betternether.warped_composter": "Wirrkomposter",
-  "block.betternether.warped_bookshelf": "Wirrbücherregal"
+  "block.betternether.warped_bookshelf": "Wirrbücherregal",
+  "item.betternether.nether_sakura_boat": "Nether Sakura Boot",
+  "item.betternether.nether_sakura_chest_boat": "Nether Sakura Boot mit Kiste",
+  "item.betternether.mushroom_fir_boat": "Pilztannenboot",
+  "item.betternether.mushroom_fir_chest_boat": "Pilztannenboot mit Kiste",
+  "item.betternether.anchor_tree_boat": "Ankerbaumboot",
+  "item.betternether.anchor_tree_chest_boat": "Ankerbaumboot mit Kiste",
+  "item.betternether.rubeus_boat": "Rubeusboot",
+  "item.betternether.rubeus_chest_boat": "Rubeusboot mit Kiste",
+  "item.betternether.stalagnate_boat": "Stalagnatboot",
+  "item.betternether.stalagnate_chest_boat": "Stalagnatboot mit Kiste",
+  "item.betternether.wart_boat": "Warzenboot",
+  "item.betternether.wart_chest_boat": "Warzenboot mit Kiste",
+  "item.betternether.willow_boat": "Weidenboot",
+  "item.betternether.willow_chest_boat": "Weidenboot mit Kiste",
+  "item.betternether.nether_mushroom_boat": "Pilzboot",
+  "item.betternether.nether_mushroom_chest_boat": "Pilzboot mit Kiste",
+  "item.betternether.nether_reed_boat": "Schilfboot",
+  "item.betternether.nether_reed_chest_boat": "Schilfboot mit Kiste",
+  "item.betternether.crimson_boat": "Karmesinboot",
+  "item.betternether.crimson_chest_boat": "Karmesinboot mit Kiste",
+  "item.betternether.warped_boat": "Wirrboot",
+  "item.betternether.warped_chest_boat": "Wirrboot mit Kiste"
 }
