--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -628,24 +628,46 @@
   "emi.category.betternether.forge": "Forges",
   "block.betternether.nether_sakura_composter": "Nether Sakura Composter",
   "block.betternether.nether_sakura_bookshelf": "Nether Sakura Bookshelf",
+  "item.betternether.nether_sakura_boat": "Nether Sakura Boat",
+  "item.betternether.nether_sakura_chest_boat": "Nether Sakura Boat with Chest",
   "block.betternether.mushroom_fir_composter": "Mushroom Fir Composter",
   "block.betternether.mushroom_fir_bookshelf": "Mushroom Fir Bookshelf",
+  "item.betternether.mushroom_fir_boat": "Mushroom Fir Boat",
+  "item.betternether.mushroom_fir_chest_boat": "Mushroom Fir Boat with Chest",
   "block.betternether.anchor_tree_composter": "Anchor Tree Composter",
   "block.betternether.anchor_tree_bookshelf": "Anchor Tree Bookshelf",
+  "item.betternether.anchor_tree_boat": "Anchor Tree Boat",
+  "item.betternether.anchor_tree_chest_boat": "Anchor Tree Boat with Chest",
   "block.betternether.rubeus_composter": "Rubeus Composter",
   "block.betternether.rubeus_bookshelf": "Rubeus Bookshelf",
+  "item.betternether.rubeus_boat": "Rubeus Boat",
+  "item.betternether.rubeus_chest_boat": "Rubeus Boat with Chest",
   "block.betternether.stalagnate_composter": "Stalagnate Composter",
   "block.betternether.stalagnate_bookshelf": "Stalagnate Bookshelf",
+  "item.betternether.stalagnate_boat": "Stalagnate Boat",
+  "item.betternether.stalagnate_chest_boat": "Stalagnate Boat with Chest",
   "block.betternether.wart_composter": "Wart Composter",
   "block.betternether.wart_bookshelf": "Wart Bookshelf",
+  "item.betternether.wart_boat": "Wart Boat",
+  "item.betternether.wart_chest_boat": "Wart Boat with Chest",
   "block.betternether.willow_composter": "Willow Composter",
   "block.betternether.willow_bookshelf": "Willow Bookshelf",
+  "item.betternether.willow_boat": "Willow Boat",
+  "item.betternether.willow_chest_boat": "Willow Boat with Chest",
   "block.betternether.nether_mushroom_composter": "Mushroom Composter",
   "block.betternether.nether_mushroom_bookshelf": "Mushroom Bookshelf",
+  "item.betternether.nether_mushroom_boat": "Mushroom Boat",
+  "item.betternether.nether_mushroom_chest_boat": "Mushroom Boat with Chest",
   "block.betternether.nether_reed_composter": "Nether Reed Composter",
   "block.betternether.nether_reed_bookshelf": "Nether Reed Bookshelf",
+  "item.betternether.nether_reed_boat": "Nether Reed Boat",
+  "item.betternether.nether_reed_chest_boat": "Nether Reed Boat with Chest",
   "block.betternether.crimson_composter": "Crimson Composter",
   "block.betternether.crimson_bookshelf": "Crimson Bookshelf",
+  "item.betternether.crimson_boat": "Crimson Boat",
+  "item.betternether.crimson_chest_boat": "Crimson Boat with Chest",
   "block.betternether.warped_composter": "Warped Composter",
-  "block.betternether.warped_bookshelf": "Warped Bookshelf"
+  "block.betternether.warped_bookshelf": "Warped Bookshelf",
+  "item.betternether.warped_boat": "Warped Boat",
+  "item.betternether.warped_chest_boat": "Warped Boat with Chest"
 }
