Added some new Advancements

--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -601,7 +601,7 @@
   "itemGroup.betternether.nether_blocks": "BetterNether Blöcke",
   "itemGroup.betternether.nether_items": "BetterNether Items",
   "advancements.betternether.root.title": "BetterNether",
-  "advancements.betternether.root.decription": "Noch mehr Nether",
+  "advancements.betternether.root.description": "Noch mehr Nether",
   "advancements.betternether.blue_obsidian.title": "Blauer Funkel",
   "advancements.betternether.blue_obsidian.description": "Erschaffe blauen Obsidian indem du Lava über Seelensand oder Seelenstein in Obsidian umwandelst",
   "advancements.betternether.ruby_ore.title": "Rubinerz",
@@ -615,7 +615,7 @@
   "advancements.betternether.ruby_gear.title": "Mit Flammen bedeckt",
   "advancements.betternether.ruby_gear.description": "Hülle dich in falmmenrote Rubinausrüstung",
   "advancements.betternether.ruby_tools.title": "Das Rote Nether",
-  "advancements.betternether.ruby_tools.description": "Verwende Rubinwerkzeuge aus den Tiefen des Nether",
+  "advancements.betternether.ruby_tools.description": "Baue Rubinwerkzeuge aus den Tiefen des Nether",
   "advancements.betternether.city.title": "Eine glorreiche Vergangenheit",
   "advancements.betternether.city.description": "Finde eine längst verlassene Nether-Stadt",
   "biome.betternether.upside_down_forest_cleared": "Abgestorbener Kopfüberwald",
@@ -678,5 +678,17 @@
   "tag.betternether.rubeus_logs": "Rubeusstämme",
   "tag.betternether.anchor_tree_logs": "Ankerbaumstämme",
   "tag.betternether.nether_reed_logs": "Schilfstämme",
-  "tag.betternether.nether_mushroom_logs": "Pilzstämme"
+  "tag.betternether.nether_mushroom_logs": "Pilzstämme",
+  "advancements.betternether.all_the_biomes.title": "Nur das Beste",
+  "advancements.betternether.all_the_biomes.description": "Besuche alle BetterNether Biome",
+  "advancements.betternether.cincinnasite_ore.title": "Cincinnasite Erz",
+  "advancements.betternether.cincinnasite_ore.description": "Erhalte einen Cincinnasit-Barren",
+  "advancements.betternether.cincinnasite_gear.title": "Glänzend!",
+  "advancements.betternether.cincinnasite_gear.description": "Ziehe eine Cincinnasit-Ausrüstung an",
+  "advancements.betternether.cincinnasite_tools.title": "Härter als Gold",
+  "advancements.betternether.cincinnasite_tools.description": "Hol dir ein paar glänzende Cincinnasit-Werkzeuge",
+  "advancements.betternether.cincinnasite_diamond_tools.title": "Bling",
+  "advancements.betternether.cincinnasite_diamond_tools.description": "Überziehe alle deine Cincinnasit-Werkzeuge mit Diamanten",
+  "advancements.betternether.cincinnasite_forge.title": "Verschmiedet Nochmal",
+  "advancements.betternether.cincinnasite_forge.description": "Benutze eine Schmiede, um etwas zu schmelzen"
 }
