--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -601,7 +601,7 @@
   "itemGroup.betternether.nether_blocks": "BetterNether Blocks",
   "itemGroup.betternether.nether_items": "BetterNether Items",
   "advancements.betternether.root.title": "BetterNether",
-  "advancements.betternether.root.decription": "Discover the BetterNether",
+  "advancements.betternether.root.description": "Discover the BetterNether",
   "advancements.betternether.blue_obsidian.title": "Something Blue",
   "advancements.betternether.blue_obsidian.description": "Obtain blue Obsidian by converting Lava above Soulsand or Soulstone to Obsidian",
   "advancements.betternether.ruby_ore.title": "Ruby Ore",
@@ -615,7 +615,7 @@
   "advancements.betternether.ruby_gear.title": "Covered in Flames",
   "advancements.betternether.ruby_gear.description": "Cover yourself in flaming red ruby gear",
   "advancements.betternether.ruby_tools.title": "Red Nether",
-  "advancements.betternether.ruby_tools.description": "Use some ruby tools from the depth of the Nether",
+  "advancements.betternether.ruby_tools.description": "Obtain some ruby tools from the depth of the Nether",
   "advancements.betternether.city.title": "A glorious Past",
   "advancements.betternether.city.description": "Find a long abandoned Nether City",
   "biome.betternether.upside_down_forest_cleared": "Dead Upside Down Forest",
@@ -678,5 +678,17 @@
   "tag.betternether.rubeus_logs": "Rubeus Logs",
   "tag.betternether.anchor_tree_logs": "Anchor Tree Logs",
   "tag.betternether.nether_reed_logs": "Nether Reed Logs",
-  "tag.betternether.nether_mushroom_logs": "Nether Mushroom Logs"
+  "tag.betternether.nether_mushroom_logs": "Nether Mushroom Logs",
+  "advancements.betternether.all_the_biomes.title": "All The Best",
+  "advancements.betternether.all_the_biomes.description": "Visit all BetterNether Biomes",
+  "advancements.betternether.cincinnasite_ore.title": "Cincinnasite Ore",
+  "advancements.betternether.cincinnasite_ore.description": "Obtain a Cincinnasite Ingot",
+  "advancements.betternether.cincinnasite_gear.title": "All That Glitters",
+  "advancements.betternether.cincinnasite_gear.description": "Dress up in Cincinnasite Gear",
+  "advancements.betternether.cincinnasite_tools.title": "Harder Than Gold",
+  "advancements.betternether.cincinnasite_tools.description": "Get some shiny cincinnasite tools",
+  "advancements.betternether.cincinnasite_diamond_tools.title": "Bling",
+  "advancements.betternether.cincinnasite_diamond_tools.description": "Cover all your cincinnasite tools in Diamonds",
+  "advancements.betternether.cincinnasite_forge.title": "Forgified",
+  "advancements.betternether.cincinnasite_forge.description": "Use a forge to smelt something"
 }
